Create handler Method Get Objects and update docs
