# swagger.yml
@@ -180,6 +180,33 @@ paths:
           description: Service unavailable, cannot broadcast right away
           schema:
             $ref: '#/definitions/Error'
+  /games/{id}/objects:
+    get:
+      description: Get all objects on map
+      parameters:
+        - name: id
+          in: path
+          type: integer
+          format: int32
+          description: Game identificator
+          required: true
+      responses:
+        200:
+          description: Returns all objects on map
+          schema:
+            $ref: '#/definitions/Objects'
+        400:
+          description: Invalid parameters
+          schema:
+            $ref: '#/definitions/Error'
+        404:
+          description: Game not found
+          schema:
+            $ref: '#/definitions/Error'
+        500:
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/Error'
 
 definitions:
 
@@ -299,3 +326,14 @@ definitions:
         description: Game identificator
         type: integer
         format: int32
+
+  Objects:
+    type: object
+    description: Object contains all game objects on map
+    required:
+      - objects
+    properties:
+      objects:
+        description: List of all game objects on map
+        type: array
+        items: {}
